syntax = "proto3";

option csharp_namespace = "multiplixe.classificador.grpc.Protos";

package multiplixe.classificador.grpc.Protos;

service Classificador {
	rpc ObterClassificacao(ClassificacaoRequest) returns (ClassificacaoResponse);
}

message ClassificacaoRequest {
	string UsuarioId = 1;
}

message ClassificacaoMessage {
	PontuacaoMessage Pontuacao = 1;
	SaldoMessage Saldo = 2;
	NivelMessage Nivel = 3;
	RankingPosicaoMessage Ranking = 4;
	repeated RedeSocialMessage RedesSociais = 5;
}

message RedeSocialMessage {
	int32 id = 1;
	string Nome = 2;
	int32 Pontos = 3;
	int32 Percent = 4;
	bool Conectado = 5;
}

message PontuacaoMessage {
	int32 Valor = 1;
}

message SaldoMessage {
	int32 Valor = 1;
}

message RankingPosicaoMessage {
	int32 Valor = 1;
}

message NivelMessage {
	NivelItemMessage Anterior = 1;
	NivelItemAtualMessage Atual = 2;
	NivelItemProximoMessage Proximo = 3;
	bool Mudou = 4;
}

message NivelItemMessage {
	int32 Id = 1;
	string Nome = 2;
	bool Mostrar = 3;
}

message NivelItemAtualMessage {
	NivelItemMessage Nivel = 1;
	int32 PontosParaProximoNivel = 2;
}

message NivelItemProximoMessage {
	NivelItemMessage Nivel = 1;
	int32 Pontos = 2;
}

message ClassificacaoResponse {
	int32 HttpStatusCode = 1;
	ClassificacaoMessage Classificacao = 2;
}

message PontuacaoResponse {
	int32 HttpStatusCode = 1;
	PontuacaoMessage Pontuacao = 2;
}